# claude-meter

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs
.githooks/: pre-commit
.github/workflows/: audit.yml  build.yml  pages.yml  release.yml
macos/: ClaudeMeterApp.swift
scripts/: build-macos-app.sh  bump-version.ps1  check-version.ps1  install-git-hooks.cmd  install-macos-launchagent.sh
site/: app.js  index.html  metrics.json  styles.css
src/: config.rs  credentials.rs  db.rs  errors.rs  macos_app.rs  main.rs  popup.rs  theme.rs  tray.rs  updater.rs  widget.rs  windows_app.rs
src/i18n/: ar.rs  bg.rs  bn.rs  ca.rs  cs.rs  da.rs  de.rs  el.rs  en.rs  es.rs  et.rs  fa.rs  fi.rs  fr.rs  he.rs  hi.rs  hr.rs  hu.rs  id.rs  it.rs  ja.rs  ko.rs  lt.rs  lv.rs  mod.rs  ms.rs  nl.rs  no.rs  pl.rs  pt.rs  ro.rs  ru.rs  sk.rs  sr.rs  sv.rs  th.rs  tl.rs  tr.rs  uk.rs  vi.rs  (+1 more)
src/providers/: claude.rs  codex.rs
src/ui/: colors.rs  render.rs
